@@ -1,4 +1,8 @@
 from ftw.upgrade import UpgradeStep
+from ZODB.POSException import ConflictError
+import logging
+
+logger = logging.getLogger('ftw.upgrade')
 
 
 class FixMessageContentType(UpgradeStep):
@@ -11,6 +15,20 @@ class FixMessageContentType(UpgradeStep):
     def __call__(self):
         for obj in self.objects({'portal_type': 'ftw.mail.mail'},
                                 'Fix message.contentType (unicode -> str)'):
+
+            # ftw.mail's cached `message` property behaves in weird ways
+            # sometimes, that's why this upgrade step takes an unususally
+            # defensive approach
+
+            # initialize attributes (lazy attribute loading)
+            obj.Title()
+
             message = obj.message
-            if isinstance(message.contentType, unicode):
-                message.contentType = message.contentType.encode('ascii')
+            try:
+                if isinstance(message.contentType, unicode):
+                    message.contentType = message.contentType.encode('ascii')
+            except ConflictError:
+                raise
+            except Exception, e:
+                logger.warn("Updating object {0} failed: {1}".format(
+                    obj.absolute_url(), str(e)))
